[package]
name = "pfm"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
