[package]
name = "pfm"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
